--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,7 @@ Jeffrey Hu <zhiwehu@gmail.com>
 Jens Alm <jens.alm@mac.com>
 Jerzy Kozera <jerzy.kozera@gmail.com>
 Jesper Noehr <jesper@noehr.org>
+Joey Wilhelm <tarkatronic@gmail.com>
 John Andrews <johna@stjit011.(none)>
 John Watson <johnw@mahalo.com>
 Jonas Haag <jonas@lophus.org>
