Added tests and updated changelog
* map call changed to list comprehension
* added self to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,7 @@ Jeffrey Hu <zhiwehu@gmail.com>
 Jens Alm <jens.alm@mac.com>
 Jerzy Kozera <jerzy.kozera@gmail.com>
 Jesper Noehr <jesper@noehr.org>
+Jimmy Bradshaw <james.g.bradshaw@gmail.com>
 Joey Wilhelm <tarkatronic@gmail.com>
 John Andrews <johna@stjit011.(none)>
 John Watson <johnw@mahalo.com>
