--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,16 @@
  Change history
 ================
 
+.. _version-1.4.0:
+
+1.4.0
+=====
+:release-date: 2018-12-09 1:30 p.m. UTC+2:00
+:release-by: Omer Katz
+
+- Fix migrations dependencies.
+- Added the DJANGO_CELERY_BEAT_TZ_AWARE setting.
+
 .. _version-1.3.0:
 
 1.3.0
