--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -120,7 +120,8 @@ msgstr "Longitude"
 
 #: django_celery_beat/models.py:66
 msgid "Run the task when the event happens at this longitude"
-msgstr "Démarre cette tâche lorsque cette évènement se produit à cette longitude"
+msgstr "Démarre cette tâche lorsque cette évènement se produit à cette "
+"longitude"
 
 #: django_celery_beat/models.py:73
 msgid "solar event"
@@ -136,7 +137,8 @@ msgstr "Nombre de Périodes"
 
 #: django_celery_beat/models.py:125
 msgid "Number of interval periods to wait before running the task again"
-msgstr "Nombre d'intervale de périodes à attendre avant de démarrer la tâche à nouveau"
+msgstr "Nombre d'intervale de périodes à attendre avant de démarrer la tâche "
+"à nouveau"
 
 #: django_celery_beat/models.py:131
 msgid "Interval Period"
@@ -190,7 +192,8 @@ msgstr "Minute⋅s"
 
 #: django_celery_beat/models.py:234
 msgid "Cron Minutes to Run. Use \"*\" for \"all\". (Example: \"0,30\")"
-msgstr "Minutes Cron pour Démarrer. Utilisez \"*\" pour \"toutes\". (Exemple: \"0,30\")"
+msgstr "Minutes Cron pour Démarrer. Utilisez \"*\" pour \"toutes\". "
+(Exemple: \"0,30\")"
 
 #: django_celery_beat/models.py:239
 msgid "Hour(s)"
@@ -198,7 +201,8 @@ msgstr "Heure⋅s"
 
 #: django_celery_beat/models.py:241
 msgid "Cron Hours to Run. Use \"*\" for \"all\". (Example: \"8,20\")"
-msgstr "Heures Cron pour Démarrer. Utilisez \"*\" pour \"toutes\". (Exemple: \"8,20\")"
+msgstr "Heures Cron pour Démarrer. Utilisez \"*\" pour \"toutes\". "
+"(Exemple: \"8,20\")"
 
 #: django_celery_beat/models.py:246
 msgid "Day(s) Of The Week"
@@ -206,7 +210,8 @@ msgstr "Jour⋅s De La Semaine"
 
 #: django_celery_beat/models.py:248
 msgid "Cron Days Of The Week to Run. Use \"*\" for \"all\". (Example: \"0,5\")"
-msgstr "Jours De La Semaine Cron pour Démarrer. Utilisez \"*\" pour \"tous\". (Exemple: \"0,5\")"
+msgstr "Jours De La Semaine Cron pour Démarrer. Utilisez \"*\" pour "
+"\"tous\". (Exemple: \"0,5\")"
 
 #: django_celery_beat/models.py:254
 msgid "Day(s) Of The Month"
@@ -215,7 +220,8 @@ msgstr "Jour⋅s Du Mois"
 #: django_celery_beat/models.py:256
 msgid ""
 "Cron Days Of The Month to Run. Use \"*\" for \"all\". (Example: \"1,15\")"
-msgstr "Jours Du Mois Cron pour Démarrer. Utilisez \"*\" pour \"tous\". (Exemple: \"1,15\")"
+msgstr "Jours Du Mois Cron pour Démarrer. Utilisez \"*\" pour \"tous\". "
+"(Exemple: \"1,15\")"
 
 #: django_celery_beat/models.py:262
 msgid "Month(s) Of The Year"
@@ -224,7 +230,8 @@ msgstr "Mois De L'Année"
 #: django_celery_beat/models.py:264
 msgid ""
 "Cron Months Of The Year to Run. Use \"*\" for \"all\". (Example: \"0,6\")"
-msgstr "Mois De L'Année Cron pour Démarrer. Utilisez \"*\" pour \"tous\". (Exemple: \01,6\")"
+msgstr "Mois De L'Année Cron pour Démarrer. Utilisez \"*\" pour \"tous\". "
+"(Exemple: \01,6\")"
 
 #: django_celery_beat/models.py:271
 msgid "Cron Timezone"
@@ -232,7 +239,8 @@ msgstr "Fuseau Horaire Cron"
 
 #: django_celery_beat/models.py:273
 msgid "Timezone to Run the Cron Schedule on.  Default is UTC."
-msgstr "Fuseau Horaire pour lequel démarrer la planification Cron. UTC par défaut."
+msgstr "Fuseau Horaire pour lequel démarrer la planification Cron. UTC par "
+"défaut."
 
 #: django_celery_beat/models.py:279
 msgid "crontab"
@@ -254,7 +262,8 @@ msgstr "Description Courte Pour Cette Tâche"
 msgid ""
 "The Name of the Celery Task that Should be Run.  (Example: \"proj.tasks."
 "import_contacts\")"
-msgstr "Le Nom de la Tâche Celery qui devrait être démarrée.  (Exemple: \"proj.tasks.import_contacts\")"
+msgstr "Le Nom de la Tâche Celery qui devrait être démarrée.  (Exemple: "
+"\"proj.tasks.import_contacts\")"
 
 #: django_celery_beat/models.py:380
 msgid "Interval Schedule"
@@ -264,8 +273,8 @@ msgstr "Planification intervalée"
 msgid ""
 "Interval Schedule to run the task on.  Set only one schedule type, leave the "
 "others null."
-msgstr "Planification intervalée pour démarrer cette tâche. Ne mettez qu'un seul type de planification,"
-"laissez les autres vides"
+msgstr "Planification intervalée pour démarrer cette tâche. Ne mettez qu'un "
+"seul type de planification, laissez les autres vides"
 
 #: django_celery_beat/models.py:386
 msgid "Crontab Schedule"
@@ -275,8 +284,8 @@ msgstr "Planification Crontab"
 msgid ""
 "Crontab Schedule to run the task on.  Set only one schedule type, leave the "
 "others null."
-msgstr "Planification Crontab pour démarrer cette tâche. Ne mettez qu'un seul type de planification,"
-"laissez les autres vides"
+msgstr "Planification Crontab pour démarrer cette tâche. Ne mettez qu'un "
+"seul type de planification, laissez les autres vides"
 
 #: django_celery_beat/models.py:392
 msgid "Solar Schedule"
@@ -286,8 +295,8 @@ msgstr "Planification Solaire"
 msgid ""
 "Solar Schedule to run the task on.  Set only one schedule type, leave the "
 "others null."
-msgstr "Planification Solaire pour démarrer cette tâche. Ne mettez qu'un seul type de planification,"
-"laissez les autres vides"
+msgstr "Planification Solaire pour démarrer cette tâche. Ne mettez qu'un "
+"seul type de planification, laissez les autres vides"
 
 #: django_celery_beat/models.py:398
 msgid "Clocked Schedule"
@@ -297,8 +306,8 @@ msgstr "Planification Horaire"
 msgid ""
 "Clocked Schedule to run the task on.  Set only one schedule type, leave the "
 "others null."
-msgstr "Planification Horaire pour démarrer cette tâche. Ne mettez qu'un seul type de planification,"
-"laissez les autres vides"
+msgstr "Planification Horaire pour démarrer cette tâche. Ne mettez qu'un 
+"seul type de planification, laissez les autres vides"
 
 #: django_celery_beat/models.py:405
 msgid "Positional Arguments"
@@ -306,7 +315,8 @@ msgstr "Arguments Positionnels"
 
 #: django_celery_beat/models.py:407
 msgid "JSON encoded positional arguments (Example: [\"arg1\", \"arg2\"])"
-msgstr "Arguments positionnels encodés en JSON (Exemple: [\"arg1\", \"arg2\"])"
+msgstr "Arguments positionnels encodés en JSON (Exemple: [\"arg1\", "
+"\"arg2\"])"
 
 #: django_celery_beat/models.py:412
 msgid "Keyword Arguments"
@@ -314,7 +324,8 @@ msgstr "Arguments Nommés"
 
 #: django_celery_beat/models.py:414
 msgid "JSON encoded keyword arguments (Example: {\"argument\": \"value\"})"
-msgstr "Arguments nommés encodés en JSON (Exemple: {\"argument\": \"valeur\"})"
+msgstr "Arguments nommés encodés en JSON (Exemple: {\"argument\": "
+"\"valeur\"})"
 
 #: django_celery_beat/models.py:420
 msgid "Queue Override"
@@ -322,7 +333,8 @@ msgstr "Surcharge de file d'attente"
 
 #: django_celery_beat/models.py:422
 msgid "Queue defined in CELERY_TASK_QUEUES. Leave None for default queuing."
-msgstr "File d'attente définie dans CELERY_TASK_QEUEUS. Laissez Vide pour la mise en file d'attente par défaut."
+msgstr "File d'attente définie dans CELERY_TASK_QEUEUS. Laissez Vide pour "
+"la mise en file d'attente par défaut."
 
 #: django_celery_beat/models.py:431
 msgid "Exchange"
@@ -356,8 +368,8 @@ msgstr "Priorité"
 msgid ""
 "Priority Number between 0 and 255. Supported by: RabbitMQ, Redis (priority "
 "reversed, 0 is highest)."
-msgstr "Valeur de Priorité entre 0 et 255. Supporté par: RabbitMQ, Redis (priorité "
-" inversé, 0 est plus élevé)."
+msgstr "Valeur de Priorité entre 0 et 255. Supporté par: RabbitMQ, Redis "
+"(priorité inversé, 0 est plus élevé)."
 
 #: django_celery_beat/models.py:455
 msgid "Expires Datetime"
@@ -366,7 +378,8 @@ msgstr "Date et heure d'expiration"
 #: django_celery_beat/models.py:457
 msgid ""
 "Datetime after which the schedule will no longer trigger the task to run"
-msgstr "Date et heure après laquelle la planification ne déclenchera plus la tâche à démarrer"
+msgstr "Date et heure après laquelle la planification ne déclenchera plus "
+"la tâche à démarrer"
 
 #: django_celery_beat/models.py:462
 msgid "Expires timedelta with seconds"
@@ -376,7 +389,8 @@ msgstr "Différence de temps en secondes d'expiration"
 msgid ""
 "Timedelta with seconds which the schedule will no longer trigger the task to "
 "run"
-msgstr "Différence de temps en secondes à laquelle la planification ne déclenchera plus la tâche à démarrer"
+msgstr "Différence de temps en secondes à laquelle la planification ne "
+"déclenchera plus la tâche à démarrer"
 
 #: django_celery_beat/models.py:470
 msgid "One-off Task"
@@ -392,7 +406,8 @@ msgstr "Date et heure de démarrage"
 
 #: django_celery_beat/models.py:478
 msgid "Datetime when the schedule should begin triggering the task to run"
-msgstr "Date et heure à laquelle la planification devrait commencer à déclencher la tâche à démarrer"
+msgstr "Date et heure à laquelle la planification devrait commencer à "
+"déclencher la tâche à démarrer"
 
 #: django_celery_beat/models.py:489
 msgid "Last Run Datetime"
@@ -402,8 +417,8 @@ msgstr "Date et heure du dernier démarrage"
 msgid ""
 "Datetime that the schedule last triggered the task to run. Reset to None if "
 "enabled is set to False."
-msgstr "Date et heure à laquelle la planification à dernièrement déclenchée la tâche à démarrer. Est remis à Vide si "
-"activé est mis à Faux"
+msgstr "Date et heure à laquelle la planification à dernièrement déclenchée " 
+"la tâche à démarrer. Est remis à Vide si activé est mis à Faux"
 
 #: django_celery_beat/models.py:496
 msgid "Total Run Count"
