--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,13 @@
  Change history
 ================
 
+2.0.0
+=====
+:release-date: 
+:release-by: 
+- Added support for Django 3.0
+- Dropped support for Django < 2.2 and Python < 3.5
+
 1.6.0
 =====
 :release-date: 2020-02-01 4:30 p.m. UTC+6:00
