Update authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -92,3 +92,4 @@ Wes Winham <winhamwr@gmail.com>
 Williams Mendez <wmendez27@gmail.com>
 WoLpH <Rick@Fawo.nl>
 dongweiming <ciici123@hotmail.com>
+SunnyCapt <sunny.capt@tuta.io>
