--- a/Changelog
+++ b/Changelog
@@ -9,10 +9,12 @@
 :release-date: 2021-07-02 11:15 a.m. UTC+6:00
 :release-by: Asif Saif Uddin
 
+- Require celery>=5.0,<6.0
 - Enable Django 3.2 CI and add default_auto_field
 - Fix locale in dir tree
 - Do not blindly delete duplicate schedules (#389)
-- used python:3.8-slim for lighter builds
+- Use `python:3.8-slim` for lighter builds
+
 
 2.2.0
 =====
