Add author name

--- a/AUTHORS
+++ b/AUTHORS
@@ -37,6 +37,7 @@ Grégoire Cachet <gregoire@audacy.fr>
 Hari <haridara@gmail.com>
 Idan Zalzberg <idanzalz@gmail.com>
 Ionel Maries Cristian <ionel.mc@gmail.com>
+Jaeyoung Heo <jay.jaeyoung@gmail.com>
 Jannis Leidel <jannis@leidel.info>
 Jason Baker <amnorvend@gmail.com>
 Jay States <jstates@based.ca>
