--- a/django_celery_beat/locale/ko/LC_MESSAGES/django.po
+++ b/django_celery_beat/locale/ko/LC_MESSAGES/django.po
@@ -74,7 +74,7 @@ msgstr "선택된 테스크들을 실행 합니다."
 
 #: django_celery_beat/apps.py:13
 msgid "Periodic Tasks"
-msgstr "Periodic Tasks"
+msgstr "주기적인 테스크들"
 
 #: django_celery_beat/models.py:26
 msgid "Days"
