Fixed error path for zh-Hans translate (#548)

--- a/django_celery_beat/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/django_celery_beat/locale/zh_Hans/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Rainshaw <rxg@live.com>\n"
 "Language-Team: x_zhuo <LL@li.org>\n"
-"Language: zh-hans \n"
+"Language: zh-Hans \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
