⬆️ [SD-6130] Core: updating django version.
- Updating django version.

--- a/Changelog
+++ b/Changelog
@@ -4,9 +4,9 @@
  Change history
 ================
 
-.. _version-2.3.0:
+.. _version-2.3.1-rc1:
 
-2.3.0
+2.3.1-rc1
 =====
 :release-date:
 :release-by:
