Readded binary .mo files

--- a/django_celery_beat/locale/es/LC_MESSAGES/django.po
+++ b/django_celery_beat/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-04-04 01:30+0000\n"
-"PO-Revision-Date: 2021-04-03 22:36-0300\n"
+"PO-Revision-Date: 2022-10-14 23:48+0200\n"
 "Last-Translator: Luis Saavedra <luis94855510@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 3.1.1\n"
 
 #: django_celery_beat/admin.py:64
 msgid "Task (registered)"
