--- a/django_celery_beat/locale/ko/LC_MESSAGES/django.po
+++ b/django_celery_beat/locale/ko/LC_MESSAGES/django.po
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-01-24 09:35+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2022-10-14 23:48+0200\n"
 "Last-Translator: Jaeyoung Heo <jay.jaeyoung@gmail.com>\n"
 "Language-Team: \n"
-"Language: Korean\n"
+"Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -298,8 +298,8 @@ msgstr "태스크의 간단한 설명을 작성합니다."
 msgid ""
 "The Name of the Celery Task that Should be Run.  (Example: \"proj.tasks."
 "import_contacts\")"
-msgstr "실행 되어야 하는 셀러리 태스크의 이름 (예: \"proj.tasks."
-"import_contacts\")"
+msgstr ""
+"실행 되어야 하는 셀러리 태스크의 이름 (예: \"proj.tasks.import_contacts\")"
 
 #: django_celery_beat/models.py:404
 msgid "Interval Schedule"
@@ -309,7 +309,9 @@ msgstr "Interval Schedule"
 msgid ""
 "Interval Schedule to run the task on.  Set only one schedule type, leave the "
 "others null."
-msgstr "태스크 실행 Interval Schedule. 한 종류의 스케줄 타입을 지정하면 나머지는 빈 값으로 두어야 합니다."
+msgstr ""
+"태스크 실행 Interval Schedule. 한 종류의 스케줄 타입을 지정하면 나머지는 빈 "
+"값으로 두어야 합니다."
 
 #: django_celery_beat/models.py:410
 msgid "Crontab Schedule"
@@ -319,7 +321,9 @@ msgstr "Crontab Schedule"
 msgid ""
 "Crontab Schedule to run the task on.  Set only one schedule type, leave the "
 "others null."
-msgstr "태스크 실행 Crontab Schedule. 한 종류의 스케줄 타입을 지정하면 나머지는 빈 값으로 두어야 합니다."
+msgstr ""
+"태스크 실행 Crontab Schedule. 한 종류의 스케줄 타입을 지정하면 나머지는 빈 값"
+"으로 두어야 합니다."
 
 #: django_celery_beat/models.py:416
 msgid "Solar Schedule"
@@ -329,7 +333,9 @@ msgstr "Solar Schedule"
 msgid ""
 "Solar Schedule to run the task on.  Set only one schedule type, leave the "
 "others null."
-msgstr "태스크 실행을 위한 Solar Schedule. 한 종류의 스케줄 타입을 지정하면 나머지는 빈 값으로 두어야 합니다."
+msgstr ""
+"태스크 실행을 위한 Solar Schedule. 한 종류의 스케줄 타입을 지정하면 나머지는 "
+"빈 값으로 두어야 합니다."
 
 #: django_celery_beat/models.py:422
 msgid "Clocked Schedule"
@@ -339,7 +345,9 @@ msgstr "Clocked Schedule"
 msgid ""
 "Clocked Schedule to run the task on.  Set only one schedule type, leave the "
 "others null."
-msgstr "태스크 실행을 위한 Clocked Schedule. 한 종류의 스케줄 타입을 지정하면 나머지는 빈 값으로 두어야 합니다."
+msgstr ""
+"태스크 실행을 위한 Clocked Schedule. 한 종류의 스케줄 타입을 지정하면 나머지"
+"는 빈 값으로 두어야 합니다."
 
 #: django_celery_beat/models.py:429
 msgid "Positional Arguments"
@@ -397,7 +405,9 @@ msgstr "Priority"
 msgid ""
 "Priority Number between 0 and 255. Supported by: RabbitMQ, Redis (priority "
 "reversed, 0 is highest)."
-msgstr "0과 255사이의 우선 순위 숫자. RabbitMQ, Redis 에서 지원합니다. (0이 높은 우선순위를 가집니다.)"
+msgstr ""
+"0과 255사이의 우선 순위 숫자. RabbitMQ, Redis 에서 지원합니다. (0이 높은 우선"
+"순위를 가집니다.)"
 
 #: django_celery_beat/models.py:479
 msgid "Expires Datetime"
@@ -450,7 +460,9 @@ msgstr "최종 작동 일시"
 msgid ""
 "Datetime that the schedule last triggered the task to run. Reset to None if "
 "enabled is set to False."
-msgstr "태스크가 최종적으로 작동한 시간. 만약 테스크가 비활성화 된 경우 None 으로 지정됩니다."
+msgstr ""
+"태스크가 최종적으로 작동한 시간. 만약 테스크가 비활성화 된 경우 None 으로 지"
+"정됩니다."
 
 #: django_celery_beat/models.py:520
 msgid "Total Run Count"
