Fix Django 5.0 with Pypy 3.10

--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ Darjus Loktevic <darjus@amazon.com>
 David Fischer <david.fischer.ch@gmail.com>
 David Ziegler <david.ziegler@gmail.com>
 Diego Andres Sanabria Martin <diegueus9@gmail.com>
+Dima Doroshev <dima@doroshev.com>
 Dmitriy Krasilnikov <krasilnikov.d.o@gmail.com>
 Donald Stufft <donald.stufft@gmail.com>
 Eldon Stegall
