Simplify python version requirement

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@
 Aaron Ross <aaron@wawd.com>
 Adam Endicott
 Alex Stapleton <alex.stapleton@artfinder.com>
+Alexandr Artemyev <mogost@gmail.com>
 Alvaro Vega <avega@tid.es>
 Andrew Frankel
 Andrew Watts <andrewwatts@gmail.com>
